Auto stash before revert of "Model rf_clf/716836a93fa7c17512bf3ee871b03483611eb32f with data version: 716836a93fa7c17512bf3ee871b03483611eb32f"

--- a/config.json
+++ b/config.json
@@ -1,6 +1,6 @@
 {
   "data_version": "",
   "model_label": "rf_clf",
-  "model_version": "7a195ef2a6c0dd25d2f9be780eaac3657f16cd3b",
+  "model_version": "",
   "training_type": "new"
 }
