--- a/config.json
+++ b/config.json
@@ -2,5 +2,6 @@
   "data_version": "",
   "model_label": "rf_clf",
   "model_version": "",
-  "training_type": "new"
+  "training_type": "new",
+  "preprocess_data": "True"
 }
